--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
-        <footer class="container bg-primary my-5 py-3 rounded">
+        <footer id="fooder-area" class="container bg-primary my-5 py-3 rounded">
             <section style="width: 90%; margin: auto;">
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
@@ -91,31 +91,20 @@
                       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                           <p><strong>Javascript is a  programming language.</strong></p>
-                          JavaScript is the programming language for the web. JavaScript developers work with websites,JavaScript code run in browser.JavaScript code run for in chrome v8 engine or firefox spidermonkey,.The source code is passed through a program called a compiler, which translates it into bytecode that the v8 engine  understands and can execute.JavaScript has no compilation step. the browser reads over the JavaScript code, interprets each line
-                        </div>
-                      </div>
-                    </div>
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <h3>What dose javascript evebt Loop do</h3> 
-                        </button>
-                      </h2>
-                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                          JavaScript is the programming language for the web. JavaScript developers work with websites,JavaScript code run in browser.JavaScript code run for in chrome v8 engine or firefox spidermonkey.which translates it into bytecode that the v8 engine  understands and can execute.JavaScript has no compilation step. the browser reads over the JavaScript code, interprets each line
                         </div>
                       </div>
                     </div>
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <h3>Localstores and sesonstores</h3> 
+                            <h3><strong>local storage and Session storage</strong></h3> 
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                           <p><strong>This is the third item's accordion body.</strong> </p>
+                           Local and Session storage are the web storage objects and they have the same API. LocalStorage persists the storage across browser sessions. So if the browser is closed or reopened, the storage is saved. Thats Why Local storage data has no expiration date. When open a new tab or a new window, Session storage creates a new session and new storage. Session storage are valid for only one tab at a time and when the browser is closed or reopened, the Session storage is expira.
                         </div>
                       </div>
                     </div>
