--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
                 <a class="navbar-brand" href="#">Insta-Sohor</a>
-                <button
+                 <button
                     class="navbar-toggler"
                     type="button"
                     data-toggle="collapse"
@@ -111,7 +111,7 @@
                   </div>
             </section>
         </footer>
-        <!-- Bootstrap js link -->
+        <!-- Bootstrap js link and js  -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <!-- add javascript  file  -->
         <script src="./js/app.js"></script>
